# java-native-bench

./: pom.xml
java/: pom.xml
java/src/main/java/org/mf/bench/javanative/: NativeBenchmark.java  (+3 more)
java/src/test/resources/: logback-test.xml
native/: CMakeLists.txt  pom.xml  twdata.7z
native/cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark.vcxproj  benchmark.vcxproj.filters  cmake_install.cmake  jnb-native.sln  jnb-native.vcxproj  jnb-native.vcxproj.filters
native/cmake/Release/: jnb-native.exp  jnb-native.lib
native/cmake/benchmark.dir/Release/: benchmark.exe.recipe
native/cmake/benchmark.dir/Release/benchmark.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
native/cmake/jnb-native.dir/Release/: jnb-native.dll.recipe
native/cmake/jnb-native.dir/Release/jnb-native.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
native/cmake/x64/release/ALL_BUILD/: ALL_BUILD.recipe
native/cmake/x64/release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
native/cmake/x64/release/ZERO_CHECK/: ZERO_CHECK.recipe
native/cmake/x64/release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/src/main/java/org/mf/bench/javanative/: JNBNative.java
native/src/main/native/: jnb_native.cpp  main.cpp
